# insurance_navigator

./: .cursorrules  .dockerignore  .env.template  .gitignore  .render-deploy-trigger  .vercelignore  =0.24.0  @TODO003_phase1_decisions.md  @TODO003_phase1_handoff.md  @TODO003_phase1_notes.md  AGENT_REORGANIZATION_SUMMARY.md  BACKEND_DRIVEN_ARCHITECTURE_COMPLETE.md  BUILD_DEBUGGING_GUIDE.md  BUILD_VALIDATION_SUMMARY.md  CHAT_INTERFACE_DEBUG_PROMPT.md  CLAUDE.md  COMPREHENSIVE_RCA_REPORT.md  DATABASE_REFACTORING_STATUS.md  DEPENDENCY_FIX_SUMMARY.md  DEPLOYMENT_SUCCESS_REPORT.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_ENVIRONMENT_SETUP.md  DEVELOPMENT_PIPELINE_TEST_RESULTS.md  Dockerfile  Dockerfile.agent-api  Dockerfile.dev-fast  Dockerfile.optimized-production  Dockerfile.prod-optimized  Dockerfile.render-fixed  Dockerfile.render-optimized  Dockerfile.simple  Dockerfile.upload-pipeline  Dockerfile.upload-pipeline-worker  EDGE_FUNCTIONS_DEPLOYMENT_SUCCESS.md  ENHANCED_WORKER_INVESTIGATION_SUMMARY.md  ENVIRONMENT_VARIABLES_FIX_PLAN.md  FILE_ORGANIZATION_COMPLETED.md  FM027_COMPREHENSIVE_LOGGING_SUMMARY.md  FM027_DEPLOYMENT_GUIDE.md  FM027_FINAL_REPORT.md  (+585 more)
.claude/: settings.local.json
agents/: __init__.py  base_agent.py  database_guard.py  healthcare_guide.py  patient_navigator.py  policy_compliance.py  prompt_engine.py  prompt_security.py  quality_assurance.py  service_provider.py  task_requirements.py
api/: requirements.txt  unified_navigator_api.py  websocket_routes.py
archive/: final_schema_deprecated.sql
backend/: basic_real_api_test_results_20250821_042413.json  (+5 more)
(+3743 files in other folders)
