[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance_navigator"
version = "0.1.0"
authors = [
  { name="Accessa", email="info@accessa.ai" },
]
description = "Insurance policy navigation and analysis system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "supabase",
    "pytest",
    "bcrypt",
    "python-dotenv",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
] 