[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance_navigator"
version = "0.1.0"
description = "HIPAA-compliant insurance document processing system"
requires-python = ">=3.11"
authors = [
    { name = "Accessa Team" }
]
dependencies = [
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short" 